--- a/pages/category/index.wxss
+++ b/pages/category/index.wxss
@@ -1,1 +1,91 @@
 /* pages/category/index.wxss */
+page {
+  background-color: white;
+  height: 100%;
+  font-size: 32rpx;
+  line-height: 1.6;
+  --cp-header-height: 140rpx;
+  --cp-navbar-width: 20%;
+  }
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: var(--cp-header-height);
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0 20rpx 0 10rpx;
+  border-bottom: 1px solid silver;
+  background-color: white;
+  }
+  .search-bar {
+  width: 100%;
+  height: 1rem;
+  padding: 20rpx;
+  border-radius: 16rpx;
+  background-color: #f0f0f0;
+  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); */
+  display: flex;
+  align-content: space-between;
+  align-items: center;
+  gap:20rpx;
+  }
+  .search-bar input {
+  flex-grow: 1;
+  }
+  .search-bar image {
+  width: 1.3rem;
+  height: 1.3rem;
+  }
+  .content {
+  margin-top: var(--cp-header-height);
+  /* border-top: 1px solid silver; */
+  }
+  .left-navbar {
+  margin-top: var(--cp-header-height);
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  overflow-y: auto;
+  width: var(--cp-navbar-width);
+  background-color: rgba(211,211,211, 0.4);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding-top: 15rpx;
+  gap: 30rpx;
+  }
+  .navbar-item {
+  width: 100%;
+  text-align: center;
+  }
+  .navbar-item.selected {
+  border-left: 2px solid tomato;
+  color: tomato;
+  }
+  .right-content {
+  margin-left: calc(var(--cp-navbar-width) + 20rpx);
+  padding-top: 15rpx;
+  display: grid;
+  grid-auto-flow: row;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-content: center;
+  align-items: center;
+  }
+  .catlog-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: small;
+  }
+  .catlog-card image {
+  width: 140rpx;
+  height: 140rpx;
+  }
+  
